--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -9,9 +5,48 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
+  color: gray;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.form__wrapper {
+  width: 300px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 1.5rem;
+  position: relative;
+}
+
+.confirm__btn {
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  letter-spacing: 0.02rem;
+  color: white;
+}
+
+.confirm__btn:hover {
+  opacity: 0.8;
+}
+
+.tyc__label {
+  cursor: pointer;
+}
+
+.tyc__popover {
+  position: absolute;
+  top: 16%;
+  left: 290px;
+  background-color: yellow;
+  width: 100px;
+  padding: 12px;
+  border-radius: 10px;
 }
