--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
     monospace;
 }
 
+/* ORDER SUMMARY */
 .form__wrapper {
   width: 300px;
   height: 50px;
@@ -49,4 +50,41 @@ code {
   width: 100px;
   padding: 12px;
   border-radius: 10px;
+}
+
+/* OPTIONS */
+.options__wrapper {
+  padding: 2rem;
+}
+
+.list_wrapper ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+
+.list_wrapper li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 2rem;
+}
+
+.list_wrapper h1 {
+  font-size: 1rem;
+}
+
+.list_wrapper img {
+  width: 100px;
+  height: 100px;
+}
+
+.error__wrapper {
+  color: red;
+  height: 30px;
+  border: 3px red solid;
 }
