feat: added style property

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,10 @@ code {
   padding: 2rem;
 }
 
+.option-type__heading {
+  text-transform: capitalize;
+}
+
 .list_wrapper ul {
   list-style: none;
   display: flex;
