--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+#root {
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,8 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: whitesmoke;
-  color: gray;
+  background-color: #fce6d8;
+  color: #212121;
 }
 
 code {
@@ -14,50 +18,107 @@ code {
     monospace;
 }
 
-/* ORDER SUMMARY */
-.form__wrapper {
-  width: 300px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  padding: 1.5rem;
-  position: relative;
+.main__wrapper {
+  padding: 1.5rem 3rem 1rem 3rem;
 }
 
-.confirm__btn {
+/* ORDER ENTRY */
+.options__wrapper {
+  margin-bottom: 3rem;
+}
+
+.grand_total_wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.disable__button {
+  cursor: not-allowed;
+}
+
+.place-order__button {
   cursor: pointer;
+  color: white;
+}
+
+.disable__button,
+.place-order__button {
+  margin-left: 1.5rem;
+  padding: 0.7rem;
+  width: auto;
+  height: 45px;
+  font-size: 1rem;
+  font-weight: 700;
+  border-radius: 0.4rem;
+  border: transparent 2px solid;
+  background-color: #ef8889;
+}
+
+.place-order__button:hover {
+  opacity: 0.8;
+}
+
+/* ORDER SUMMARY + SUMMARY FORM */
+.form__wrapper {
+  width: 300px;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 3rem 0rem 2rem 0rem;
+}
+
+.checkbox__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox__wrapper input {
+  margin: 0px;
+}
+
+.tyc__label {
+  margin-left: 0.4rem;
+}
+
+.disabled__btn,
+.confirm__btn {
   border-radius: 5px;
   padding: 0.5rem;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   font-size: 1rem;
   letter-spacing: 0.02rem;
   color: white;
 }
 
-.confirm__btn:hover {
-  opacity: 0.8;
+.disabled__btn {
+  cursor: not-allowed;
 }
 
-.tyc__label {
+.confirm__btn {
   cursor: pointer;
 }
 
-.tyc__popover {
-  position: absolute;
-  top: 16%;
-  left: 290px;
-  background-color: yellow;
-  width: 100px;
-  padding: 12px;
-  border-radius: 10px;
+.confirm__btn:hover,
+.back__btn:hover {
+  opacity: 0.8;
+}
+
+.change-cta,
+.back__btn {
+  font-size: 0.9rem;
+}
+
+.back__btn {
+  background: none;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  color: #212121;
 }
 
 /* OPTIONS */
-.options__wrapper,
-.grand_total_wrapper {
-  padding: 1.5rem 2rem;
-}
-
 .option-type__heading {
   text-transform: capitalize;
 }
@@ -84,8 +145,8 @@ code {
 }
 
 .list_wrapper img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
 }
 
 .error__wrapper {
@@ -101,4 +162,18 @@ code {
 
 .scoops-input {
   margin-left: 0.8rem;
+}
+
+/* ORDER CONFIRMATION */
+.new-order__btn {
+  padding: 0.7rem;
+  width: auto;
+  height: 45px;
+  font-size: 1rem;
+  font-weight: 700;
+  border-radius: 0.4rem;
+  border: white 2px solid;
+  color: white;
+  background-color: #ef8889;
+  cursor: pointer;
 }
